<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="zero">        0   </string>
    <string name="one">         1   </string>
    <string name="two">         2   </string>
    <string name="three">       3   </string>
    <string name="four">        4   </string>
    <string name="five">        5   </string>
    <string name="six">         6   </string>
    <string name="seven">       7   </string>
    <string name="eight">       8   </string>
    <string name="nine">        9   </string>

    <string name="clear">       C   </string>
    <string name="exp">         ^   </string>
    <string name="parenthesis"> ( ) </string>
    <string name="times">       ×   </string>
    <string name="divide">      ÷   </string>
    <string name="plus">        +   </string>
    <string name="minus">       -   </string>
    <string name="pm">          ±   </string>
    <string name="point">       .   </string>
    <string name="eq">          =   </string>

    <string name="bckspc">          </string>

    <string name="display">Enter a number</string>
</resources>